removed the paragraph for the date into the article header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <h2>
                 Memorises
             </h2>
+            <p class="date">May 2020</p>
         </header>
         <p>
                I am from Madagascar. I was born on 14<sup>th</sup> of September 1998 in a little village called Antokazo.
