--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <article>
         <header>
             <h2>
-                Memorises
+                Memory
             </h2>
             <p class="date">May 2020</p>
         </header>
